--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -22,7 +22,10 @@ jobs:
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bing-translate-api:${{ github.ref_name }} .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/bing-translate-api:${{ github.ref_name }}
+        run: |
+          docker push gowinder/bing-translate-api:${{ github.ref_name }}
+          docker tag gowinder/bing-translate-api:${{ github.ref_name }} gowinder/bing-translate-api:latest
+          docker push gowinder/bing-translate-api:latest
 
       - name: Deploy to remote server
         uses: appleboy/ssh-action@master
